# Labonatip2.0

./: .gitignore  BpLRMB.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeList.txt  LICENSE  README.md  README.txt  latestRelease.txt  main.md  update_data.xml  version_prefix.txt
.github/: issue_template.md
CMakeModules/: FindVLD.cmake  UtilsMacros.cmake  project.vcxproj.user.in  script_BuildInstall.cmake  script_BuildPackage.cmake  script_init_cmake.cmake  script_setLocalDebugEnvironment.cmake
Ext_data/: README.txt
apps/: CMakeLists.txt  README.md
apps/Biopen_wizard/: CMakeLists.txt  Lab-on-a-tip.cpp  Lab-on-a-tip.h  Lab-on-a-tip.ui  Lab-on-a-tip.ui.autosave  Q_DebugStream.h  README.md  XmlProtocolReader.h  XmlProtocolWriter.cpp  chart.cpp  chart.h  controls.cpp  dataStructures.h  delivery.cpp  main.cpp  ppc1Actions.cpp  protocolCommands.cpp  protocolCommands.h  protocolEditor.cpp  protocolEditorDelegates.cpp  protocolEditorDelegates.h  protocolReader.cpp  protocolReader.h  protocolRunner.cpp  protocolRunner.h  protocolTreeWidgetItem.cpp  protocolTreeWidgetItem.h  protocolWizard.cpp  protocolWizard.h  protocolWizard.ui  protocolWriter.cpp  protocolWriter.h  resources.qrc  solutions.cpp  toolbarActions.cpp  tools.cpp  tools.h  tools.ui  updater.cpp  updater.h  (+2 more)
apps/Biopen_wizard/Ext_data/: README.md
apps/Biopen_wizard/forms/: Lab-on-a-tip.ui  tools.ui
apps/Biopen_wizard/include/: Lab-on-a-tip.h  XmlProtocolReader.h  XmlProtocolWriter.h  chart.h  dataStructures.h  myQTled.h  protocolRunner.h  protocolTreeWidgetItem.h  protocolWriter.h  tools.h  updater.h  xmlsyntaxhighlighter.h
apps/Biopen_wizard/languages/: README.md  cn.ts  eng.ts  ita - Copy.ts  ita.ts  sve.ts  tranlateAll.bat  translateAll.bat  translateAll.sh
apps/Biopen_wizard/presetProtocols/: Basic protocol.prt  Biopen tip cleaning.prt  Complete test.prt  Tube cleaning.prt  completeTest.prt  initialize.prt  run.prt  shutdown.prt  sleep.prt  stadby.prt  testNoAsk.prt  tryToSave.prt
apps/Biopen_wizard/settings/: settings.ini
apps/Biopen_wizard/src/: Lab-on-a-tip.cpp  XmlProtocolReader.cpp  XmlProtocolWriter.cpp  chart.cpp  controls.cpp  delivery.cpp  main.cpp  protocolEditor.cpp  protocolEditorDelegates.cpp  protocolRunner.cpp  protocolTreeWidgetItem.cpp  protocolWriter.cpp  toolbarActions.cpp  tools.cpp  updater.cpp  updates.cpp  xmlsyntaxhighlighter.cpp
apps/Biopen_wizard_6/: CMakeLists.txt  Lab-on-a-tip.cpp  Lab-on-a-tip.h  Lab-on-a-tip.ui  Q_DebugStream.h  README.md  XmlProtocolReader.cpp  XmlProtocolReader.h  XmlProtocolWriter.cpp  XmlProtocolWriter.h  chart.cpp  chart.h  controls.cpp  dataStructures.h  delivery.cpp  languages.qrc  main.cpp  ppc1Actions.cpp  protocolCommands.cpp  protocolCommands.h  protocolEditor.cpp  protocolEditorDelegates.cpp  protocolEditorDelegates.h  protocolReader.cpp  protocolReader.h  protocolRunner.cpp  protocolRunner.h  protocolTreeWidgetItem.cpp  protocolTreeWidgetItem.h  protocolWizard.cpp  protocolWizard.h  protocolWriter.cpp  protocolWriter.h  resources.qrc  solutions.cpp  toolbarActions.cpp  tools.cpp  tools.h  tools.ui  updater.ui  (+2 more)
apps/Biopen_wizard_6/languages/: README.md  eng.ts  ita.ts  sve.ts  translateAll.bat
apps/Biopen_wizard_6/presetProtocols/: Basic protocol.prt  Biopen tip cleaning.prt  Sync example.prt  Tube cleaning.prt  completeTest.prt  initialize.prt  pumpSolution1.prt  pumpSolution2.prt  pumpSolution3.prt  pumpSolution4.prt  pumpSolution5.prt  pumpSolution6.prt  rampPon.prt  run.prt  shutdown.prt  sleep.prt  stopSolution5.prt
apps/Biopen_wizard_6/presetProtocols/internal/: LargeAndRegular.prt  LargeAndSlow.prt  StandardAndRegular.prt  StandardAndSlow.prt  initialize.prt  operational.prt  (+14 more)
apps/Biopen_wizard_6/settings/: settings.ini
apps/Lab-on-a-tip/: CMakeLists.txt  Lab-on-a-tip.cpp  Lab-on-a-tip.h  Lab-on-a-tip.ui  Lab-on-a-tip_chart.cpp  Lab-on-a-tip_chart.h  Lab-on-a-tip_controls.cpp  Lab-on-a-tip_delivery.cpp  Lab-on-a-tip_macroRunner.cpp  Lab-on-a-tip_macroRunner.h  Lab-on-a-tip_macroWizard.cpp  Lab-on-a-tip_macroWizard.h  Lab-on-a-tip_macroWizard.ui  Lab-on-a-tip_ppc1actions.cpp  Lab-on-a-tip_protocolEditor.cpp  Lab-on-a-tip_protocolEditor.h  Lab-on-a-tip_protocolEditor.ui  Lab-on-a-tip_solutions.cpp  Lab-on-a-tip_toolbarActions.cpp  Lab-on-a-tip_tools.cpp  Lab-on-a-tip_tools.h  Lab-on-a-tip_tools.ui  ProgressBarCircolare.ui.qml  QRoundProgressBar.cpp  Q_DebugStream.h  README.md  XmlProtocolReader.cpp  XmlProtocolReader.h  XmlProtocolWriter.cpp  XmlProtocolWriter.h  chart.cpp  chart.h  controls.cpp  dataStructures.h  delivery.cpp  labonatip_macroWizard.ui  languages.qrc  macroRunner.cpp  macroWizard.cpp  macroWizard.h  (+28 more)
apps/Lab-on-a-tip/languages/: README.md  cn.qm  cn.ts  eng.qm  eng.ts  ita.qm  ita.ts  sve.qm  sve.ts  tranlateAll.bat
apps/Lab-on-a-tip/presetMacros/: initialize.macro  injectSol1.macro  run.macro  shutdown.macro  sleep.macro
apps/Lab-on-a-tip/presetProtocols/: run.prt  shutdown.prt  test.prt  testDS.prt  testFS.prt  testVacuum.prt  tryLoops.prt
apps/Lab-on-a-tip/settings/: settings.ini
apps/Lab-on-a-tip_console/: CMakeLists.txt  Lab-on-a-tip_console.cpp  Lab-on-a-tip_console.h  Lab-on-a-tip_console.ui  README.md  main.cpp  resources.rc
apps/PPC1api_test_cmdline/: CMakeLists.txt  PPC1api_test_cmdline.cpp
apps/Serial_console/: CMakeLists.txt  Lab-on-a-tip_console.cpp  Lab-on-a-tip_console.h  Lab-on-a-tip_console.ui
apps/Translator/: CMakeLists.txt  README.md  Translator_GUI.cpp  Translator_GUI.h  Translator_GUI.ui  XmlTranslationReader.cpp  XmlTranslationReader.h  XmlTranslationWriter.cpp  XmlTranslationWriter.h  main.cpp  resources.qrc
docs/: Doxyfile_labonatip.in  README.md
libs/: CMakeLists.txt
libs/ppc1api/: CMakeLists.txt  README.md
libs/ppc1api/src/: ppc1api.cpp
libs/ppc1api6/: CMakeLists.txt  README.md
libs/ppc1api6/include/fluicell/ppc1api6/: export.h  ppc1api6.h  ppc1api6_data_structures.h
libs/ppc1api6/src/: ppc1api6.cpp
plugins/: CMakeLists.txt  README.md
plugins/plugin_1/: CMakeLists.txt
resources/: ExampleMacroFile.txt  FlowsCalculation.xlsx  README.md
(+5 files in other folders)
